--- a/Simpleform/WebContent/index.html
+++ b/Simpleform/WebContent/index.html
@@ -7,7 +7,7 @@
 
 		<script src="resources/sap-ui-core.js"
 				id="sap-ui-bootstrap"
-				data-sap-ui-libs="sap.ui.commons,sap.m"
+				data-sap-ui-libs="sap.ui.commons"
 				data-sap-ui-theme="sap_bluecrystal">
 		</script>
 		<!-- add sap.ui.table,sap.ui.ux3 and/or other libraries to 'data-sap-ui-libs' if required -->
